Fixed spacing on contact list items. Added Google Maps link to physical address item.

--- a/main.css
+++ b/main.css
@@ -47,7 +47,7 @@ a:link, a:visited, a:active, a:hover
 #hero_background
 {
 	background-color: #1F1F21;
-	border-bottom: 4px solid #4A4A4A;
+	border-bottom: 2px solid #4A4A4A;
 }
 
 #hero_content
